--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -625,6 +625,7 @@
 		Italian:"Età dell'Oro"
 		Simplified_Chinese:"黄金时代"
 		Czech:"Zlatý Věk"
+		Russian:"Золотой век"
 }
 
 	// You don't have to translate this is it's good for your language, but some languages have their own display
