Fix translation derp

--- a/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
+++ b/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
@@ -1054,7 +1054,7 @@
 	"Show pixel units":{
 		Italian:"Mostra unità pixel"
 		Simplified_Chinese:"显示像素单位",
-		Traditional_Chinese:"显示像素单位",
+		Traditional_Chinese:"顯示像素單位",
 		Ukrainian:"Показати піксельні підрозділи"
 		Czech:"Zobrazit jednotky jako pixely"
 }
