--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -2191,7 +2191,8 @@
 		Italian:"Azione"
 		Czech:"Činnost"
 		Simplified_Chinese:"行动"
-		Ukrainian:"Дія"		Traditional_Chinese:"行動"
+		Ukrainian:"Дія"		
+		Traditional_Chinese:"行動"
 }
 
 	"Defeated":{
