--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -2050,7 +2050,7 @@
 	"Our status":{
 		Italian:"I tuoi progressi"
 		French:"Notre situation"
-		Simplified_Chinese:"我们的进度"
+		Simplified_Chinese:"我们文明的进度"
 		Russian:"Наш статус"
 		Czech:"Naše vyhlídky"
 }
@@ -2058,7 +2058,7 @@
 	"Global status":{
 		Italian:"Progressi globali"
 		French:"Situation globale"
-		Simplified_Chinese:"全球进度"
+		Simplified_Chinese:"所有文明的进度"
 		Russian:"Глобальный статус"
 		Czech:"Globální situace"
 }
