Added Brandenburg Gate wonder - #643 Fixed translation bugs

--- a/android/assets/jsons/Translations/Buildings.json
+++ b/android/assets/jsons/Translations/Buildings.json
@@ -1948,7 +1948,16 @@
 		German:"Militärakademie"
 		Polish:"Akademia wojskowa"
 		Czech:"Vojenská akademie"
-}
+	}
+	
+	"Brandenburg Gate":{
+	}
+	
+	"Free Great General appears near the Capital":{
+	}
+	
+	"'Pale Death beats equally at the poor man's gate and at the palaces of kings.'  - Horace":{
+	}
 
 	"Broadcast Tower":{
 		Italian:"Ripetitore"
