Implemented One City Challenge
Implemented One City Challenge

--- a/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
+++ b/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
@@ -77,6 +77,10 @@
 		Ukrainian:"Міст-держав"
 }
 
+	"One City Challenge":{
+		
+	}
+
 	"No barbarians":{//it can be showed correct as usual, so I'm not translate it.
 		Italian:"Niente barbari"
 		French:"Pas de barbare"
