--- a/android/assets/jsons/Translations/Notifications.json
+++ b/android/assets/jsons/Translations/Notifications.json
@@ -347,6 +347,7 @@
 		Italian:"L'unità nemica [RangedUnit] ha distrutto le difese di [cityname]!"
 		Czech:"Nepřátelská jednotka [RangedUnit] zničila obranu města [cityname]"
 		Ukrainian:"Ворожий підрозділ [RangedUnit] знищив оборону нашого міста [cityname]"
+		Russian:"Вражеский [RangedUnit] прорвал оборону города [cityname]"
 	}
 
 	"Enemy city [cityName] has destroyed our [ourUnit]":{
@@ -699,6 +700,7 @@
 		Simplified_Chinese:"[cityName]已建立与您的首都的连接！"
 		Traditional_Chinese:"[cityName]以建立與您的首都的連接！"
 		Ukrainian:"Місто [cityName] зʼєднано з нашею столицею!"
+		Russian:"От города [cityName] был проложен путь к столице!"
 	}
 
 	// Trade
