--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -215,7 +215,8 @@
 		Simplified_Chinese:"攻击范围",
 		Traditional_Chinese:"攻擊範圍",
 		Czech:"Vzdálenost"
-		Ukrainian:"Дальність"
+    Russian:"Радиус"
+    Ukrainian:"Дальність"
 	}
 
 /////// Unit actions
@@ -727,6 +728,8 @@
 		Italian:"[year] a.C."
 		Czech:"[year] př. n. l."
 		Simplified_Chinese:"公元前[year]年"
+		Traditional_Chinese:"公元前[year]年"
+		Russian:"[year] до н.э."
 		Ukrainian:"до н.е."
 	}
 
@@ -734,6 +737,8 @@
 		Italian:"[year] d.C."
 		Czech:"[year] n. l."
 		Simplified_Chinese:"公元[year]年"
+		Traditional_Chinese:"公元[year]年"
+		Russian:"[year] н.э."
 		Ukrainian:"після н.е."
 	}
 
@@ -1006,6 +1011,7 @@
 		Italian:"Dona [resource]"
 		Simplified_Chinese:"获得资源：[resource]"
 		Czech:"Poskytuje [resource]"
+		Russian:"Обеспечивает [resource]"
 		Ukrainian:"Забезпечити [resource]"
 	}
 
@@ -1014,6 +1020,7 @@
 		Simplified_Chinese:"替换现有设施：[improvement]"
 		Traditional_Chinese:"替換現有設施：[improvement]"
 		Czech:"Nahrazuje [improvement]"
+		Russian:"Заменяет [improvement]"
 		Ukrainian:"Замінити [improvement]"
 	}
 
@@ -1096,6 +1103,7 @@
 		Simplified_Chinese:"吞并城市"
 		Traditional_Chinese:"併吞城市"
 		Czech:"Anektovat město"
+		Russian:"Захватить город"
 		Ukrainian:"Анексоване місто"
 }
 
@@ -1234,6 +1242,7 @@
 		Simplified_Chinese:"食物转化为产能"
 		Ukrainian:"Їжа перетворюється на виробництво"
 		Traditional_Chinese:"食物轉化為產能"
+		Russian:"Обмен еды на производство"
 }
 
 	"[turnsToStarvation] turns to lose population":{
@@ -1360,6 +1369,7 @@
 		Simplified_Chinese:"转化1/4产能为金钱",
 		Traditional_Chinese:"轉換1/4產能為金錢"
 		Czech:"Konvertovat produkci na zlato v poměru 4 ku 1"
+		Russian:"Обмен производства на золото 4 к 1"
 		Ukrainian:"Перетворити виробництво на золото з курсом 4 до 1"
 }
 
@@ -1368,6 +1378,7 @@
 		Simplified_Chinese:"转化1/4产能为科研",
 		Traditional_Chinese:"轉換1/4產能為科研",
 		Czech:"Konvertovat produkci na výzkum v poměru 4 ku 1"
+		Russian:"Обмен производства на науку 4 к 1"
 		Ukrainian:"Перетворити виробництво на науку з курсом 4 до 1"
 }
 
@@ -1376,6 +1387,7 @@
 		Simplified_Chinese:"城市将不会建造/组建任何项目"
 		Traditional_Chinese:"城市將不會建造/訓練任何項目"
 		Czech:"Město nebude nic vyrábět"
+		Russian:"Город не будет производить ничего"
 		Ukrainian:"Місто не буде нічого виробляти"
 }
 
@@ -1647,6 +1659,7 @@
 		Simplified_Chinese:"可以占领！"
 		Traditional_Chinese:"已佔領！" // not sure
 		Czech:"Obsazené!"
+		Russian:"Оккупирован!" // not sure too
 		Ukrainian:"Окуповано!"
 }
 
@@ -1670,6 +1683,7 @@
 		Simplified_Chinese:"轰击"
 		Traditional_Chinese:"轟炸"
 		Czech:"Bombardovat"
+		Russian:"Бомбардировать"
 		Ukrainian:"Обстрілювати"
 }
 
@@ -1693,6 +1707,7 @@
 		Simplified_Chinese:"对远程攻击防御"
 		Traditional_Chinese:"對遠程攻擊防禦"
 		Czech:"obrana v boji na dálku"
+		Russian:"Защита против дальнего боя"
 		Ukrainian:"захист проти дальнобійників"
 }
 
@@ -1716,6 +1731,7 @@
 		Simplified_Chinese:"主动攻击加成"
 		Traditional_Chinese:"主動攻擊加成"
 		Czech:"Útočný bonus"
+		Russian:"Бонус атакующего"
 		Ukrainian:""
 }
 
@@ -1724,6 +1740,7 @@
 		Simplified_Chinese:"登陆作战"
 		Traditional_Chinese:"登陸作戰"
 		Czech:"Přistání"
+		Russian:"Высадка"
 		Ukrainian:"Висадка"
 }
 
@@ -1732,6 +1749,7 @@
 		Simplified_Chinese:"侧翼夹击",
 		Traditional_Chinese:"側翼夾擊",
 		Czech:"Doprovod"
+		Russian:"Атака с фланга"
 		Ukrainian:"Атака з флангу"
 }
 
@@ -1740,6 +1758,7 @@
 		Simplified_Chinese:"对战[unitType]"
 		Traditional_Chinese:"對戰[unitType]"
 		Czech:"proti [unitType]"
+		Russian:"против [unitType]"
 		Ukrainian:"проти [unitType]"
 }
 
@@ -1748,6 +1767,7 @@
 		Simplified_Chinese:"地形修正",
 		Traditional_Chinese:"地形修正",
 		Czech:"Terén"
+		Russian:"Местность"
 		Ukrainian:"Місцевість"
 }
 
@@ -1824,6 +1844,7 @@
 		Simplified_Chinese:"人民为您英明领导下取得的丰功伟绩欢欣鼓舞，您的帝国进入了黄金时代！",
 		Traditional_Chinese:"人民為您英明領導下取得的豐功偉業歡欣鼓舞，您的帝國進入了黃金時代！",
 		Czech:"Naši občané jsou spokojeni s vaší vládou po dlouhou dobu díky čemuž říše vstoupila do Zlatého věku!"
+		Russian:"Граждане настолько счастливы при вашей власти, что ваша империя вступает в золотой век!"
 		Ukrainian:"Ваші громадяни були задоволені вашим правлінням так довго, що імперія вступає в Золотий вік!"
 }
 
@@ -1939,6 +1960,7 @@
 		Simplified_Chinese:"吞并的城市"
 		Ukrainian:"Окуповане місто"
 		Traditional_Chinese:"併吞的城市"
+		Russian:"Базовое счастье"
 	}
 
 	"Buildings":{
@@ -1988,6 +2010,7 @@
 		Simplified_Chinese:"基础产出"
 		Traditional_Chinese:"基礎產出"
 		Czech:"Základ"
+		Russian:"Базовые значения"
 		Ukrainian:"Початкове значення"
 }
 
@@ -1997,6 +2020,7 @@
 		Simplified_Chinese:"相关加成"
 		Ukrainian:"Бонуси"
 		Traditional_Chinese:"相關加成"
+		Russian:"Бонусы"
 }
 
 
@@ -2005,6 +2029,7 @@
 		Simplified_Chinese:"实际产出"
 		Traditional_Chinese:"實際產出"
 		Czech:"Celkem"
+		Russian:"Итоговые"
 		Ukrainian:"Фінал"
 }
 
@@ -2193,6 +2218,7 @@
 		Simplified_Chinese:"行动"
 		Ukrainian:"Дія"		
 		Traditional_Chinese:"行動"
+		Russian:"Действие"
 }
 
 	"Defeated":{
@@ -2214,6 +2240,7 @@
 		Simplified_Chinese:"地块"
 		Traditional_Chinese:"地區"
 		Czech:"Políčka"
+		Russian:"Клетки"
 		Ukrainian:"Клітини"
 }
 
@@ -2669,6 +2696,7 @@
 		Simplified_Chinese:"教程"
     Ukrainian:"Навчальні посібники"
 		Traditional_Chinese:"教學"
+		Russian:"Советы"
 }
 
 	"Cost":{
@@ -2911,6 +2939,7 @@
 		Simplified_Chinese:"清除当前地图"
 		Ukrainian:"Очистити поточну мапу"
 		Traditional_Chinese:"清除目前地圖"
+		Russian:"Очистить карту"
 }
 
 	"Save map":{
@@ -2919,6 +2948,7 @@
 		Simplified_Chinese:"保存地图"
 		Ukrainian:"Зберегти мапу"
 		Traditional_Chinese:"儲存地圖"
+		Russian:"Сохранить карту"
 }
 
 	"Load map":{
@@ -2927,6 +2957,7 @@
 		Simplified_Chinese:"读取地图"
 		Ukrainian:"Завантажити мапу"
 		Traditional_Chinese:"讀取地圖"
+		Russian:"Загрузить карту"
 }
 
 	"Download map":{
@@ -2935,6 +2966,7 @@
 		Simplified_Chinese:"下载地图"
 		Ukrainian:"Завантажити мапу"
 		Traditional_Chinese:"下載地圖"
+		Russian:"Скачать карту"
 }
 
 	"Exit map editor":{
@@ -2943,6 +2975,7 @@
 		Simplified_Chinese:"退出地图编辑器"
 		Ukrainian:"Вийти з редактора мап"
 		Traditional_Chinese:"退出地圖編輯器"
+		Russian:"Выйти из редактора карт"
 }
 
 	"[nation] starting location":{
