added no ancient ruins option

--- a/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
+++ b/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
@@ -88,6 +88,10 @@
 		Ukrainian:"Без варварів"
 }
 
+	"No ancient ruins": {
+		
+	}
+
 	"Victory conditions": {
 		Italian:"Condizioni di Vittoria"
 		French: "Conditions de victoire"
